--- a/hl_image_picker/pubspec.yaml
+++ b/hl_image_picker/pubspec.yaml
@@ -6,26 +6,30 @@ issue_tracker: https://github.com/howljs/hl_image_picker/issues
 version: 1.2.16
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
+   sdk: '>=2.18.0 <4.0.0'
+   flutter: '>=3.3.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-  hl_image_picker_platform_interface: ^1.2.4
-  hl_image_picker_ios: ^1.2.10
-  hl_image_picker_android: ^1.2.11
+   flutter:
+      sdk: flutter
+   hl_image_picker_platform_interface: ^1.2.4
+   hl_image_picker_ios: ^1.2.10
+   hl_image_picker_android:
+      git:
+         url: https://github.com/hacickn/hl_image_picker
+         ref: main
+         path: hl_image_picker_android
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
-  plugin_platform_interface: ^2.0.2
+   flutter_test:
+      sdk: flutter
+   flutter_lints: ^2.0.0
+   plugin_platform_interface: ^2.0.2
 
 flutter:
-  plugin:
-    platforms:
-      android:
-        default_package: hl_image_picker_android
-      ios:
-        default_package: hl_image_picker_ios
+   plugin:
+      platforms:
+         android:
+            default_package: hl_image_picker_android
+         ios:
+            default_package: hl_image_picker_ios
